fixing logo/feedback btn overlap

--- a/res/client/css/feedback.css
+++ b/res/client/css/feedback.css
@@ -2,7 +2,7 @@
   font-size: 14px;
   position: fixed;
   bottom: -3px;
-  right: 60px;
+  left: 45px;
   width: auto;
 }
 #feedback-module p {  font-size: 13px }
